[tool.poetry]
name = "pycon.ru"
version = "0.1.0"
description = ""
authors = ["Belousov Maksim <lib.bmw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.910"
redis = "^3.5.3"
types-redis = "^3.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
